added css and content changed

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         <div class="thumbnail">
           <div class="content">
             <div class="header">
-              <h1 class="title">Ladakh diary</h1>
-              <p class="subtitle">This is a story of two brothers who went on a road trip to Ladakh.A secluded place with lonely mountains and clear roads,where silence spreads to miles, the only voice audible to your eardrums is that of wind or the Enfield you are riding on.The Journey offered them with peace, bonding and memories to remember.
+              <h5 class="title">about the book</h5>
+              <p class="subtitle">This is a story of two brothers who went on a road trip to Ladakh.
+                A secluded place with lonely mountains and clear roads,where silence spreads to miles, the only voice audible to your eardrums is that of wind or the Enfield you are riding on.The Journey offered them with peace, bonding and memories to remember.
               </p>
-              <p>If you are the one who is planning to experience or travel on a journey similiar to the author and tired of procrastinating your passion and wishes. Put your hands on this book and unveil how two ordinary Software Engineers struck with regular 9-6 jobs went ahead on a journey with career and relationships on stake.</p>
+              <p class="subtitle">If you are tired of procrastinating your passion and wishes. Put your hands on this book and unveil how two ordinary Software Engineers struck with regular 9-6 jobs went ahead on a journey with career and relationships on stake.</p>
             </div>
             <div class="footer">
             <div class="price">
-              <i class="fas fa-rupee-sign"></i>  125
+              <i class="fas fa-rupee-sign"></i> 125
+              <p>KS Publications</p>
             </div>
               <img class="bar" src="img/qr.png"></img>
             </div>
@@ -34,22 +36,21 @@
         </div>
       </div>
       <div class="sidebar">
-        <h1 class="up">
+        <h6 class="up">
           <span> l </span>
           <span> a </span>
           <span> d </span>
           <span> a </span>
           <span> k </span>
           <span> h </span>
-        </h1>
-        <h1 class="down">
+        </h6>
+        <h6 class="down">
           <span> d </span>
           <span> i </span>
           <span> a </span>
           <span> r </span>
           <span> y </span>
-        </h1>
-        <img class="logo" src="img/fav.ico"></img>
+        </h6>
       </div>
       <div class="front">
         <div class="thumbnail">
@@ -59,10 +60,10 @@
               <p class="subtitle">A Journey to meet passion</p>
             </div>
             <div class="author">
-              Sudhir kumar
+              <p>sudhir kumar</p>
             </div>
             <div class="footer">
-              Designed and published by KS publications &copy; 2018 , india
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
             </div>
           </div>
         </div>
