--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="header">
               <h5 class="title">about the book</h5>
               <p class="subtitle">This is a story of two brothers who went on a road trip to Ladakh.
-                A secluded place with lonely mountains and clear roads,where silence spreads to miles, the only voice audible to your eardrums is that of wind or the Enfield you are riding on.The Journey offered them with peace, bonding and memories to remember.
+                A secluded place with lonely mountains and clear roads,where silence spreads to miles, the only voice audible to your eardrums is that of wind or the Enfield you are riding on.This Journey offered them with peace, introspection and memories to remember.
               </p>
-              <p class="subtitle">If you are tired of procrastinating your passion and wishes. Put your hands on this book and unveil how two ordinary Software Engineers struck with regular 9-6 jobs went ahead on a journey with career and relationships on stake.</p>
+              <p class="subtitle">If you are tired of procrastinating your  travel plans and leaving passion behind. Put your hands on this book and unveil how two ordinary Software Engineers struck with regular 9-6 jobs went ahead on a journey with career and relationships on stake.</p>
             </div>
             <div class="footer">
             <div class="price">
