added two pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
   <title>Ladakh Diary Book Cover</title>
- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Fredericka+the+Great|Frijole|Gruppo|Kumar+One+Outline|Limelight|Monoton|Montserrat:400,900i" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Frijole|Gruppo|Kumar+One+Outline|Limelight|Questrial|Monoton|Montserrat:400,900i" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -65,6 +65,42 @@
               <p>sudhir kumar</p>
             </div>
               <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="secondcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Dark <span class="color">Shadow</span><br>of the lost dynasty</h1>
+            </div>
+            <div class="footer">
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="thirdcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title"><span class="color">tr</span>yst<br><span class="color">tr</span>ust<br> &<br><span class="color">tr</span>uth</h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p><span class="color">sudhir</span>kumar</p>
+              </div>
+              <p><span class="color">Designed and published by</span> &nbsp; KS publications &copy; 2018 , india</p>
             </div>
           </div>
         </div>
