added new cover

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
   <title>Ladakh Diary Book Cover</title>
  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Frijole|Gruppo|Kumar+One+Outline|Limelight|Questrial|Monoton|Montserrat:400,900i" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=League+Script" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -101,6 +102,25 @@
                 <p><span class="color">sudhir</span>kumar</p>
               </div>
               <p><span class="color">Designed and published by</span> &nbsp; KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="fourthcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">She looks better <br>in his arms</h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
             </div>
           </div>
         </div>
