--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
   <title>Ladakh Diary Book Cover</title>
- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Frijole|Gruppo|Kumar+One+Outline|Limelight|Questrial|Monoton|Montserrat:400,900i" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Frijole|Gruppo|Kumar+One+Outline|Limelight|Aladin|Questrial|Monoton|Montserrat:400,900i" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=League+Script" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/custom.css">
