added cover css

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="thumbnail">
           <div class="content">
             <div class="header">
-              <h1 class="title"><span class="color">tr</span>yst<br><span class="color">tr</span>ust<br> &<br><span class="color">tr</span>uth</h1>
+              <h1 class="title"><span class="color">tr</span><span class="half">y</span>st<br><span class="color">tr</span><span class="half">u</span>st<br><span class="half">&</span> <br><span class="color">tr</span><span class="half">u</span>th</h1>
             </div>
             <div class="footer">
               <div class="author">
