--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
   <title>Ladakh Diary Book Cover</title>
- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Frijole|Gruppo|Kumar+One+Outline|Limelight|Aladin|Questrial|Monoton|Montserrat:400,900i" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=League+Script" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Frijole|Gruppo|Candal|Kumar+One+Outline|Limelight|Aladin|Raleway|Megrim|Questrial|Cinzel+Decorative|Monoton|Montserrat:400,900i"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=League+Script" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -21,16 +22,19 @@
           <div class="content">
             <div class="header">
               <h5 class="title">about the book</h5>
-              <p class="subtitle">This is a story of two brothers who went on a road trip to Ladakh.
-                A secluded place with lonely mountains and clear roads,where silence spreads to miles, the only voice audible to your eardrums is that of wind or the Enfield you are riding on.This Journey offered them with peace, introspection and memories to remember.
+              <p class="subtitle">This is a story of two brothers who went on a road trip to Ladakh. A secluded place with lonely mountains and
+                clear roads,where silence spreads to miles, the only voice audible to your eardrums is that of wind or the
+                Enfield you are riding on.This Journey offered them with peace, introspection and memories to remember.
               </p>
-              <p class="subtitle">If you are tired of procrastinating your  travel plans and leaving passion behind. Put your hands on this book and unveil how two ordinary Software Engineers struck with regular 9-6 jobs went ahead on a journey with career and relationships on stake.</p>
+              <p class="subtitle">If you are tired of procrastinating your travel plans and leaving passion behind. Put your hands on this book
+                and unveil how two ordinary Software Engineers struck with regular 9-6 jobs went ahead on a journey with
+                career and relationships on stake.</p>
             </div>
             <div class="footer">
-            <div class="price">
-              <i class="fas fa-rupee-sign"></i> 125
-              <p>KS Publications</p>
-            </div>
+              <div class="price">
+                <i class="fas fa-rupee-sign"></i> 125
+                <p>KS Publications</p>
+              </div>
               <img class="bar" src="img/qr.png"></img>
             </div>
           </div>
@@ -62,9 +66,9 @@
             </div>
 
             <div class="footer">
-            <div class="author">
-              <p>sudhir kumar</p>
-            </div>
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
               <p>Designed and published by KS publications &copy; 2018 , india</p>
             </div>
           </div>
@@ -79,7 +83,9 @@
         <div class="thumbnail">
           <div class="content">
             <div class="header">
-              <h1 class="title">Dark <span class="color">Shadow</span><br>of the lost dynasty</h1>
+              <h1 class="title">Dark
+                <span class="color">Shadow</span>
+                <br>of the lost dynasty</h1>
             </div>
             <div class="footer">
               <p>Designed and published by KS publications &copy; 2018 , india</p>
@@ -95,13 +101,25 @@
         <div class="thumbnail">
           <div class="content">
             <div class="header">
-              <h1 class="title"><span class="color">tr</span><span class="half">y</span>st<br><span class="color">tr</span><span class="half">u</span>st<br><span class="half">&</span> <br><span class="color">tr</span><span class="half">u</span>th</h1>
+              <h1 class="title">
+                <span class="color">tr</span>
+                <span class="half">y</span>st
+                <br>
+                <span class="color">tr</span>
+                <span class="half">u</span>st
+                <br>
+                <span class="half">&</span>
+                <br>
+                <span class="color">tr</span>
+                <span class="half">u</span>th</h1>
             </div>
             <div class="footer">
               <div class="author">
-                <p><span class="color">sudhir</span>kumar</p>
+                <p>
+                  <span class="color">sudhir</span>kumar</p>
               </div>
-              <p><span class="color">Designed and published by</span> &nbsp; KS publications &copy; 2018 , india</p>
+              <p>
+                <span class="color">Designed and published by</span> &nbsp; KS publications &copy; 2018 , india</p>
             </div>
           </div>
         </div>
@@ -114,7 +132,8 @@
         <div class="thumbnail">
           <div class="content">
             <div class="header">
-              <h1 class="title">She looks better <br>in his arms</h1>
+              <h1 class="title">She looks better
+                <br>in his arms</h1>
             </div>
             <div class="footer">
               <div class="author">
@@ -127,6 +146,85 @@
       </div>
     </div>
   </section>
+  <section class="fifthcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <span class="title">
+                <span class="color">A</span>part</span>
+              <h4 class="subtitle">Difference a little space makes</h4>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="sixthcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Last december</h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="seventhcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Until you spread your
+                <span class="color">wings</span>
+              </h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="eighthcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Joker</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
 </body>
-<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C"
+  crossorigin="anonymous"></script>
+
 </html>
