added changes and bgcolor

--- a/index.html
+++ b/index.html
@@ -10,53 +10,12 @@
   <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Frijole|Gruppo|Candal|Kumar+One+Outline|Limelight|Aladin|Raleway|Megrim|Questrial|Cinzel+Decorative|Monoton|Montserrat:400,900i"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=League+Script" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
   <section class="cover">
     <div class="display">
-      <div class="back">
-        <div class="thumbnail">
-          <div class="content">
-            <div class="header">
-              <h5 class="title">about the book</h5>
-              <p class="subtitle">This is a story of two brothers who went on a road trip to Ladakh. A secluded place with lonely mountains and
-                clear roads,where silence spreads to miles, the only voice audible to your eardrums is that of wind or the
-                Enfield you are riding on.This Journey offered them with peace, introspection and memories to remember.
-              </p>
-              <p class="subtitle">If you are tired of procrastinating your travel plans and leaving passion behind. Put your hands on this book
-                and unveil how two ordinary Software Engineers struck with regular 9-6 jobs went ahead on a journey with
-                career and relationships on stake.</p>
-            </div>
-            <div class="footer">
-              <div class="price">
-                <i class="fas fa-rupee-sign"></i> 125
-                <p>KS Publications</p>
-              </div>
-              <img class="bar" src="img/qr.png"></img>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="sidebar">
-        <h6 class="up">
-          <span> l </span>
-          <span> a </span>
-          <span> d </span>
-          <span> a </span>
-          <span> k </span>
-          <span> h </span>
-        </h6>
-        <h6 class="down">
-          <span> d </span>
-          <span> i </span>
-          <span> a </span>
-          <span> r </span>
-          <span> y </span>
-        </h6>
-      </div>
       <div class="front">
         <div class="thumbnail">
           <div class="content">
@@ -64,7 +23,6 @@
               <h1 class="title">Ladakh diary</h1>
               <p class="subtitle">A Journey to meet passion</p>
             </div>
-
             <div class="footer">
               <div class="author">
                 <p>sudhir kumar</p>
@@ -83,11 +41,14 @@
         <div class="thumbnail">
           <div class="content">
             <div class="header">
-              <h1 class="title">Dark
+              <h1 class="title">Dark<br>
                 <span class="color">Shadow</span>
-                <br>of the lost dynasty</h1>
+                <br>of the <br> lost dynasty</h1>
             </div>
             <div class="footer">
+              <div class="author">
+                <p class="color">sudhir kumar</p>
+              </div>
               <p>Designed and published by KS publications &copy; 2018 , india</p>
             </div>
           </div>
@@ -102,16 +63,10 @@
           <div class="content">
             <div class="header">
               <h1 class="title">
-                <span class="color">tr</span>
-                <span class="half">y</span>st
-                <br>
-                <span class="color">tr</span>
-                <span class="half">u</span>st
-                <br>
-                <span class="half">&</span>
-                <br>
-                <span class="color">tr</span>
-                <span class="half">u</span>th</h1>
+                <span class="color">tr</span><span class="half">y</span>st<br>
+                <span class="color">tr</span><span class="half">u</span>st<br>
+                <span class="half">&</span><br>
+                <span class="color">tr</span><span class="half">u</span>th</h1>
             </div>
             <div class="footer">
               <div class="author">
