--- a/index.html
+++ b/index.html
@@ -1,1 +1,168 @@
-<!DOCTYPE html><html lang="en"><head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico"> <title>Ladakh Diary Book Cover</title> <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Frijole|Gruppo|Candal|Kumar+One+Outline|Limelight|Aladin|Raleway|Megrim|Questrial|Cinzel+Decorative|Monoton|Montserrat:400,900i" rel="stylesheet"> <link href="https://fonts.googleapis.com/css?family=League+Script" rel="stylesheet"> <link rel="stylesheet" href="css/custom.css"></head><body> <section class="cover"> <div class="display"> <div class="front"> <div class="thumbnail"> <div class="content"> <div class="header"> <h1 class="title">Ladakh diary</h1> <p class="subtitle">A Journey to meet passion</p></div><div class="footer"> <div class="author"> <p>sudhir kumar</p></div><p>Designed and published by KS publications &copy; 2018 , india</p></div></div></div></div></div></section> <section class="secondcover"> <div class="display"> <div class="front"> <div class="thumbnail"> <div class="content"> <div class="header"> <h1 class="title">Dark<br><span class="color">Shadow</span> <br>of the <br>lost dynasty</h1> </div><div class="footer"> <div class="author"> <p class="color">sudhir kumar</p></div><p>Designed and published by KS publications &copy; 2018 , india</p></div></div></div></div></div></section> <section class="thirdcover"> <div class="display"> <div class="front"> <div class="thumbnail"> <div class="content"> <div class="header"> <h1 class="title"> <span class="color">tr</span><span class="half">y</span>st<br><span class="color">tr</span><span class="half">u</span>st<br><span class="half">&</span><br><span class="color">tr</span><span class="half">u</span>th</h1> </div><div class="footer"> <div class="author"> <p> <span class="color">sudhir</span>kumar</p></div><p> <span class="color">Designed and published by</span> &nbsp; KS publications &copy; 2018 , india</p></div></div></div></div></div></section> <section class="fourthcover"> <div class="display"> <div class="front"> <div class="thumbnail"> <div class="content"> <div class="header"> <h1 class="title">She looks better <br>in his arms</h1> </div><div class="footer"> <div class="author"> <p>sudhir kumar</p></div><p>Designed and published by KS publications &copy; 2018 , india</p></div></div></div></div></div></section> <section class="fifthcover"> <div class="display"> <div class="front"> <div class="thumbnail"> <div class="content"> <div class="header"> <span class="title"> <span class="color">A</span>part</span> <h4 class="subtitle">Difference a little space makes</h4> </div><div class="footer"> <div class="author"> <p>sudhir kumar</p></div><p>Designed and published by KS publications &copy; 2018 , india</p></div></div></div></div></div></section> <section class="sixthcover"> <div class="display"> <div class="front"> <div class="thumbnail"> <div class="content"> <div class="header"> <h1 class="title">Last december</h1> </div><div class="footer"> <div class="author"> <p>sudhir kumar</p></div><p>Designed and published by KS publications &copy; 2018 , india</p></div></div></div></div></div></section> <section class="seventhcover"> <div class="display"> <div class="front"> <div class="thumbnail"> <div class="content"> <div class="header"> <h1 class="title">Until you spread your <span class="color">wings</span> </h1> </div><div class="footer"> <div class="author"> <p>sudhir kumar</p></div><p>Designed and published by KS publications &copy; 2018 , india</p></div></div></div></div></div></section> <section class="eighthcover"> <div class="display"> <div class="front"> <div class="thumbnail"> <div class="content"> <div class="header"> <h1 class="title">Joker</h1> </div></div></div></div></div></section></body><script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
+  <title>Ladakh Diary Book Cover</title>
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Pinyon+Script|Fredericka+the+Great|Gruppo|Kumar+One+Outline|Aladin|Raleway|Megrim|Questrial|Cinzel+Decorative|Monoton|Montserrat:400,900i"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/custom.css">
+</head>
+
+<body>
+  <section class="cover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Ladakh diary</h1>
+              <p class="subtitle">A Journey to meet passion</p>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="secondcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Dark<br><span class="color">Shadow</span> <br>of the <br>lost dynasty</h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p class="color">sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="thirdcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title"> <span class="color">tr</span><span class="half">y</span>st<br><span class="color">tr</span><span
+                  class="half">u</span>st<br><span class="half">&</span><br><span class="color">tr</span><span class="half">u</span>th</h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p> <span class="color">sudhir</span>kumar</p>
+              </div>
+              <p> <span class="color">Designed and published by</span> &nbsp; KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="fourthcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">She looks better <br>in his arms</h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="fifthcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header"> <span class="title"> <span class="color">A</span>part</span>
+              <h4 class="subtitle">Difference a little space makes</h4>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="sixthcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Last december</h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="seventhcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Until you spread your <span class="color">wings</span> </h1>
+            </div>
+            <div class="footer">
+              <div class="author">
+                <p>sudhir kumar</p>
+              </div>
+              <p>Designed and published by KS publications &copy; 2018 , india</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="eighthcover">
+    <div class="display">
+      <div class="front">
+        <div class="thumbnail">
+          <div class="content">
+            <div class="header">
+              <h1 class="title">Joker</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C"
+  crossorigin="anonymous"></script>
+
+</html>
